* V34
- Reduce the App Size \o/ \o/ \o/
- Favorite and Ignore list (move contat row to the left and to the right)
- Code clean up (move from listView to recycleView) and MORE
- Long press to edit contact
- Notify me only about my favoite contacts (preferences)
- Hide ignored contacts (preferences)
- Use Emoji fonts instead of images
- Disable statistics graph animations
- Statistics are now on the main menu
- Text Statistics aligment (fragment)
- UI changes to the about screen
- UI changes to each item
- Zodiac are now icons to save space on the screen but you can still search by it's name
- New option to show Birthday type only if you want to hide other types
- Bug fixes

* V33
- Correct parsing when pattern is not recognized
- Remove zeros from statistics

* V32
- Better list layout
- Badges for ages
- Organizing preferences

* V31
- Settings to go back to the old statistics view
- Code refactoring (First part)
- Auto run on background settings/warning
- Settings for show current/next birthday age
- Fix a few more bugs

* V30
- Fix Statistic
- Statistics are moving from Text to Charts :)

* V29
- New settings option to hide zodiac
- New settings option to have Notification with a timestamp on it
- New languages
- Work on the leap years issues
- Clean up

* V28
- Remove Donate from the menu
- Fix Birthday list Menu bug
- Fix Timepicker deault time

* V27

- Rounded Icons
- Dark Theme
- More control over notification in advance
- Made the preferences dialog a little better \o/
- Cosmetic changes :O
- Better Search Function: Now you can search contact by:
    - Age
    - Month Name (January, June, etc)
    - Next Birthday Week name (check who is having a birthday party on Saturdays)
    - Zodiac Sign
    - Zodiac Element
    - Doing a wider search on the contact names
- Better navigation. No more accidental exit messages \o/
- A better way to choose how many days in advance you want to be notified
- Close soft keyboard when it loses focus