@@ -7,9 +7,9 @@ android {
         applicationId "com.tmendes.birthdaydroid"
         minSdkVersion 27
         targetSdkVersion 29
-        versionCode 34
-        versionName '20200119_V34B'
-        versionNameSuffix = 'B1'
+        versionCode 35
+        versionName '20200120_V34B'
+        versionNameSuffix = 'B2'
     }
     buildTypes {
         release {
@@ -81,9 +81,8 @@ allprojects {
 dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    api 'androidx.appcompat:appcompat:1.0.0'
+    api 'androidx.appcompat:appcompat:1.1.0'
     api 'androidx.legacy:legacy-support-v4:1.0.0'
     api 'com.google.android.material:material:1.0.0'
-    implementation 'org.sufficientlysecure:donations:2.6'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
