@@ -1,0 +1,18 @@
+#!/bin/sh
+
+BASE_DIR=~/Documents/devel/projects/BirthDayDroid/app/src/main/res
+mv stringsxml_de.xml $BASE_DIR/values-de/strings.xml
+mv stringsxml_el.xml $BASE_DIR/values-el/strings.xml
+mv stringsxml_es.xml $BASE_DIR/values-es/strings.xml
+mv stringsxml_fr.xml $BASE_DIR/values-fr/strings.xml
+mv stringsxml_id.xml $BASE_DIR/values-id/strings.xml
+mv stringsxml_it.xml $BASE_DIR/values-it/strings.xml
+mv stringsxml_ja_JP.xml $BASE_DIR/values-ja/strings.xml
+mv stringsxml_nl_NL.xml $BASE_DIR/values-nl-rNL/strings.xml
+mv stringsxml_no.xml $BASE_DIR/values-no/strings.xml
+mv stringsxml_pl.xml $BASE_DIR/values-pl/strings.xml
+mv stringsxml_pt_BR.xml $BASE_DIR/values-pt-rBR/strings.xml
+mv stringsxml_pt_PT.xml $BASE_DIR/values-pt/strings.xml
+mv stringsxml_ru.xml $BASE_DIR/values-ru/strings.xml
+mv stringsxml_sv.xml $BASE_DIR/values-sv/strings.xml
+mv stringsxml_ta.xml $BASE_DIR/values-ta/strings.xml
